--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "@tanstack/react-query": "^5.90.16",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.26.2",
         "lucide-react": "^0.562.0",
         "next": "16.1.1",
         "next-themes": "^0.4.6",
         "pg": "^8.16.3",
         "react": "19.2.3",
         "react-dom": "19.2.3",
+        "recharts": "^3.6.0",
         "tailwind-merge": "^3.4.0",
         "use-debounce": "^10.1.0",
         "zod": "^4.3.5"
