--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.26.2",
+        "fuzzball": "^2.2.3",
         "lucide-react": "^0.562.0",
         "next": "16.1.1",
         "next-themes": "^0.4.6",
         "pg": "^8.16.3",
+        "puppeteer": "^24.35.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "recharts": "^3.6.0",
