--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "pg": "^8.16.3",
         "puppeteer": "^24.35.0",
         "puppeteer-core": "^24.35.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "recharts": "^3.6.0",
