--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "postinstall": "prisma generate",
         "build": "prisma generate && next build",
         "start": "next start",
-        "lint": "eslint"
+        "lint": "eslint",
+        "db:seed-admin": "npx tsx scripts/seed-admin.ts"
     },
     "dependencies": {
+        "@auth/prisma-adapter": "^2.11.1",
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
         "@radix-ui/react-dialog": "^1.1.15",
@@ -20,12 +22,14 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@tanstack/react-query": "^5.90.16",
         "@tanstack/react-virtual": "^3.13.18",
+        "bcryptjs": "^3.0.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.26.2",
         "fuzzball": "^2.2.3",
         "lucide-react": "^0.562.0",
         "next": "16.1.1",
+        "next-auth": "^5.0.0-beta.30",
         "next-themes": "^0.4.6",
         "pg": "^8.16.3",
         "puppeteer": "^24.35.0",
@@ -39,6 +43,7 @@
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
         "@types/pg": "^8.16.0",
         "@types/react": "^19",
@@ -48,6 +53,7 @@
         "eslint-config-next": "16.1.1",
         "prisma": "^7.2.0",
         "tailwindcss": "^4",
+        "tsx": "^4.21.0",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5"
     }
