--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@tanstack/react-query": "^5.90.16",
         "@tanstack/react-virtual": "^3.13.18",
+        "@types/nprogress": "^0.2.3",
         "bcryptjs": "^3.0.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
         "next": "16.1.1",
         "next-auth": "^5.0.0-beta.30",
         "next-themes": "^0.4.6",
+        "nprogress": "^0.2.0",
         "pg": "^8.16.3",
         "puppeteer": "^24.35.0",
         "puppeteer-core": "^24.35.0",
